--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "i18next": "^23.11.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
@@ -45,6 +46,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.23.1",
     "reset-css": "^5.0.2",
