--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@douyinfe/semi-ui": "^2.59.1",
     "@douyinfe/semi-webpack-plugin": "^2.59.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@semi-bot/semi-theme-collery_v2": "^1.0.0",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
